UX: Fix the PM title icon alignment (#13214)
No extra margin to the left of the input, and the icon is one pixel lower.

--- a/app/assets/stylesheets/common/base/topic.scss
+++ b/app/assets/stylesheets/common/base/topic.scss
@@ -224,11 +224,6 @@ a.badge-category {
   height: 0.95em;
 }
 
-.private-message-glyph-wrapper {
-  float: left;
-  margin-right: 0.25em;
-}
-
 .private_message {
   #topic-title {
     .edit-topic-title {
@@ -236,7 +231,7 @@ a.badge-category {
       .private-message-glyph {
         position: absolute;
         left: 0.75em;
-        top: 6px;
+        top: 7px;
       }
       #edit-title {
         width: calc(100% - 50px);
